force-app/main/default/objects/FileRelatedInformation__c/FileRelatedInformation__c.object-meta.xml
<CustomObject>
    <label>File Related Information</label>
    <nameField>
        <label>File Related Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Related Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>