force-app/main/default/objects/FileRelatedInformation__c/fields/EnquiryStage__c.field-meta.xml
<CustomField>
    <fullName>EnquiryStage__c</fullName>
    <label>Enquiry Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>