force-app/main/default/objects/FileRelatedInformation__c/fields/ParentName__c.field-meta.xml
<CustomField>
    <fullName>ParentName__c</fullName>
    <label>Parent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>