force-app/main/default/objects/FileRelatedInformation__c/fields/RelatedClient__c.field-meta.xml
<CustomField>
    <fullName>RelatedClient__c</fullName>
    <label>Related Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>