force-app/main/default/objects/FileRelatedInformation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ParentName__c</columns>
    <columns>RelatedClient__c</columns>
    <columns>EnquiryStage__c</columns>
    <columns>Expertise__c</columns>
    <columns>JobName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>FileURL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>